# drf_api

./: .gitignore  README.md  pyproject.toml  requirements.txt
api_project/: settings.py  urls.py
blog/: models.py  serializer.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py
